--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Galeria 2</string>
+    <string name="opShare">Compartilhar</string>
+    <string name="opCamera">Tirar Foto</string>
 </resources>
